Cosmetic: Don't output a blank line if a driver provides no media status.

PR:		bin/30587
Submitted by:	Andre Albsmeier <andre.albsmeier@mchp.siemens.de>
MFC after:	1 week